# HotShot

./: .gitignore  CMakeLists.txt  README  README.md  centeringDirection.msg  moveBaxter.py  package.xml  projectImageReg.cpp  trigger_controller.ino
launch/: hotshaut.launch  hotshot.launch
scripts/: gun.py  hotshot_control  hotshot_control.py  trigger.py
src/: control.py  hotshot_image.cpp  pid.py  projectImageReg.cpp  pseudo.py
