<?xml version="1.0"?>
<package>
    <name>hotshot</name>
    <version>1.0.0</version>
    <description>
        Super-basic visual servoing
    </description>
    <maintainer email="nbellowe@gmail.com">Nathan Bellowe</maintainer>
    <author email="nbellowe@gmail.com">David Baird, Nathan Bellowe, Don't know anyone elses last name....</author>
    <license>GPLv2</license>
    <url>http://github.com/nbellowe/hotspot.git</url>
    <url type="repository">git://github.com/nbellowe/hotspot.git</url>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>catkin</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>

</package>
